visual tweaks, ensure looks good on small and big screens

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 html, body, #root {
-  min-height: 100%;
+  height: 100%;
   margin: 0px;
 }
 code {
-  padding: 2px;
+  padding: 2px 4px;
+  color: black;
   background-color: #DDD;
   border: 1px solid #888;
   border-radius: 6px;
